# sidl

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: iter.rs  main.rs  util.rs
src/types/: product.rs
