[package]
name = "sidl"
version = "0.1.0"
edition = "2021"
description = "Download and backup your Shopify product files with ease."
license = "MIT"
repository = "https://github.com/pushas/sidl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "0.9"
aws-sdk-s3 = "0.9"
env_logger = "0.9"
futures = "0.3"
lazy_static = "1"
log = "0.4"
parse_link_header = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
